--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,50 @@
-  version: "3.9"
-     nginx:    
-      build: ./nginx/  
-      container_name: nginx-container  
-      ports:  
-       - 80:80  
-      links:  
-       - php  
-      volumes_from:  
-       - app-data  
+version: "3.9"
 
-     php:    
-      build: ./php/  
-      container_name: php-container  
-      expose:  
-       - 9000  
-      links:  
-       - mysql  
-      volumes_from:  
-       - app-data  
+services:
+  nginx:
+    build: ./nginx/
+    container_name: nginx-container
+    ports:
+      - 80:80
+    links:
+      - php
+    volumes_from:
+      - app-data
 
-     app-data:    
-      image: php:7.4-fpm  
-      container_name: app-data-container  
-      volumes:  
-       - ./www/html/:/var/www/html/  
-      command: "true"  
+  php:
+    build: ./php/
+    container_name: php-container
+    expose:
+      - 9000
+    links:
+      - mysql
+    volumes_from:
+      - app-data
 
-     mysql:    
-      image: mysql:5.7  
-      container_name: mysql-container
-      restart: always
-      ports:
-      - "3306:3306"  
-      volumes_from:  
-       - mysql-data  
-      environment:  
-       MYSQL_ROOT_PASSWORD: CmKcCx  
-       MYSQL_DATABASE: kaveri  
-       MYSQL_USER: krishna  
-       MYSQL_PASSWORD: godavari  
+  app-data:
+    image: php:7.4-fpm
+    container_name: app-data-container
+    volumes:
+      - ./www/html/:/var/www/html/
+    command: "true"
 
-     mysql-data:    
-      image: mysql:5.7  
-      container_name: mysql-data-container  
-      volumes:  
-       - /var/lib/mysql  
-      command: "true"
+  mysql:
+    image: mysql:5.7
+    container_name: mysql-container
+    restart: always
+    ports:
+      - "3306:3306"
+    volumes_from:
+      - mysql-data
+    environment:
+      MYSQL_ROOT_PASSWORD: CmKcCx
+      MYSQL_DATABASE: kaveri
+      MYSQL_USER: krishna
+      MYSQL_PASSWORD: godavari
+
+  mysql-data:
+    image: mysql:5.7
+    container_name: mysql-data-container
+    volumes:
+      - /var/lib/mysql
+    command: "true"
